<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBackground"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/secondaryBackground"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/textViewCapitale"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderCapitale"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="1000.0"
                app:thumbColor="@color/sliderThumbColor"
                app:thumbHeight="30dp"
                app:tickVisible="false"
                app:trackColor="@color/sliderTrackColor"
                app:trackHeight="12dp" />

            <EditText
                android:id="@+id/editTextCapitale"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:hint="@string/editTextCapitale"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/textViewTempo"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTempo"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="100.0"
                app:thumbColor="@color/sliderThumbColor"
                app:thumbHeight="30dp"
                app:tickVisible="false"
                app:trackColor="@color/sliderTrackColor"
                app:trackHeight="12dp" />

            <EditText
                android:id="@+id/editTextTempo"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:hint="@string/editTextTempo"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/textViewTassoInteresse"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTassoInteresse"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:valueFrom="1.0"
                android:valueTo="10.0"
                app:thumbColor="@color/sliderThumbColor"
                app:thumbHeight="30dp"
                app:tickVisible="false"
                app:trackColor="@color/sliderTrackColor"
                app:trackHeight="12dp" />

            <EditText
                android:id="@+id/editTextTassoInteresse"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:hint="@string/editTextTassoInteresse"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:foregroundTint="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/TextViewPeriodicitaInteresse"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:entries="@array/mensilita"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnCalcola"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryBackground"
                android:text="@string/btnCalcola"
                android:textColor="@color/textColor"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/capitaleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/textViewCapitaleInvestito"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCapitaleInvestito"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/utileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/textViewUtile"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUtile"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rendimentoTotaleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/textViewRendimentoTotale"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRendimentoTotale"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/secondaryBackground"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/chartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>